--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css" />
-    <title>Document</title>
+    <title>Javascript Quiz</title>
 </head>
 
 <body>
     <header><span id="score"></span><span id="timer">0</span></header>
     <article>
         <h1 id="articleHeader">Code Quiz</h1>
+        <!-- quiz container and start button with function calls -->
         <div id="articleBody">
             <button onclick="startQuiz(), getQuestion(availableQuestions)">
                 Start Quiz
