fixed form and leaderboard

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <header><span id="score"></span><span id="timer">0</span></header>
+    <header><div id="leaderboard" style="display: none;"></div><button onclick="showLeaderBoard()">
+        Show Leader Board
+    </button><span id="timer">0</span></header>
     <article>
         <h1 id="articleHeader">Code Quiz</h1>
         <!-- quiz container and start button with function calls -->
